<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/contact_image"
        android:layout_width="98dp"
        android:layout_height="104dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="22dp" />

    <TextView
        android:id="@+id/contactSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/contactName"
        app:layout_constraintStart_toEndOf="@id/contactName"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="22dp" />

    <TextView
        android:id="@+id/contactPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_33_6_25_43_87_62"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/contactName"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="22dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="143dp" />


</androidx.constraintlayout.widget.ConstraintLayout>