<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedContactActivity">

    <ImageView
        android:id="@+id/imageViewDetails"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40sp"

        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="53dp"
        tools:srcCompat="@tools:sample/avatars" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_detail"
        android:id="@+id/nameDetail"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname_detail"
        android:layout_marginTop="30dp"
        android:id="@+id/surname_detail"
        app:layout_constraintTop_toBottomOf="@id/imageViewDetails"
        app:layout_constraintStart_toEndOf="@id/nameDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_06_25_57_94_45"
        android:id="@+id/detail_phone"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintTop_toBottomOf="@id/nameDetail"
        app:layout_constraintStart_toEndOf="@id/nameDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        android:id="@+id/adress_detail"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintTop_toBottomOf="@id/detail_phone"
        app:layout_constraintStart_toStartOf="@id/nameDetail"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:id="@+id/zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/zip_code"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/adress_detail"
        app:layout_constraintTop_toBottomOf="@id/detail_phone">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>